# k2hdkc_python

./: .gitignore  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  pylintrc  pyproject.toml  setup.cfg
.github/scripts/: install_dependencies.sh  lint_with_pylint.sh  test_with_unittest.sh
.github/workflows/: python-package.yml
cluster/: hosts  k2hdkc.sh  server.yaml  slave.yaml  start_server.sh
docs/: Makefile  conf.py  index.rst  k2hdkc.rst  make.bat  modules.rst  requirements.txt
docs/locale/ja/LC_MESSAGES/: authors.po  history.po  index.po  k2hdkc.po  modules.po  readme.po
src/k2hdkc/: __init__.py  k2hdkc.py
src/k2hdkc/tests/: test_k2hdkc.py  test_k2hdkc_package.py
